Refined swagger api documentation
