# server/src/routes.ts
@@ -9,9 +9,9 @@ import { Login } from './app.routes';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { CareersFair } from './app.routes';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-import { Student } from './app.routes';
-// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { DashboardInfo } from './app.routes';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { Student } from './app.routes';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { Company } from './app.routes';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
@@ -37,7 +37,6 @@ export function RegisterRoutes(app: express.Express) {
                 username: { "in": "query", "name": "username", "required": true, "dataType": "string" },
                 password: { "in": "query", "name": "password", "required": true, "dataType": "string" },
                 invite_code: { "in": "query", "name": "invite_code", "required": true, "dataType": "string" },
-                token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
                 request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
             };
 
@@ -62,7 +61,6 @@ export function RegisterRoutes(app: express.Express) {
             const args = {
                 username: { "in": "query", "name": "username", "required": true, "dataType": "string" },
                 password: { "in": "query", "name": "password", "required": true, "dataType": "string" },
-                token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
                 request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
             };
 
@@ -129,55 +127,6 @@ export function RegisterRoutes(app: express.Express) {
             promiseHandler(controller, promise, response, next);
         });
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    app.get('/student/:id',
-        function(request: any, response: any, next: any) {
-            const args = {
-                token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
-                id: { "in": "path", "name": "id", "required": true, "dataType": "string" },
-                request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
-            };
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request);
-            } catch (err) {
-                return next(err);
-            }
-
-            const controller = new Student();
-
-
-            const promise = controller.get.apply(controller, validatedArgs as any);
-            promiseHandler(controller, promise, response, next);
-        });
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    app.post('/student/:id',
-        function(request: any, response: any, next: any) {
-            const args = {
-                token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
-                id: { "in": "path", "name": "id", "required": true, "dataType": "string" },
-                new_profile: { "in": "body", "name": "new_profile", "required": true, "dataType": "nestedObjectLiteral", "nestedProperties": { "portfolio_link": { "dataType": "string" }, "github_link": { "dataType": "string" }, "linkedin_link": { "dataType": "string" }, "resume_link": { "dataType": "string" }, "degree": { "dataType": "string", "required": true }, "uni": { "dataType": "string", "required": true }, "skills": { "dataType": "any", "required": true }, "about": { "dataType": "string", "required": true }, "last_name": { "dataType": "string", "required": true }, "first_name": { "dataType": "string", "required": true } } },
-                request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
-            };
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request);
-            } catch (err) {
-                return next(err);
-            }
-
-            const controller = new Student();
-
-
-            const promise = controller.post.apply(controller, validatedArgs as any);
-            promiseHandler(controller, promise, response, next);
-        });
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     app.get('/info/:type',
         function(request: any, response: any, next: any) {
             const args = {
@@ -202,11 +151,61 @@ export function RegisterRoutes(app: express.Express) {
             promiseHandler(controller, promise, response, next);
         });
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    app.get('/student/:id',
+        function(request: any, response: any, next: any) {
+            const args = {
+                token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
+                id: { "in": "path", "name": "id", "required": true, "dataType": "string" },
+                request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request);
+            } catch (err) {
+                return next(err);
+            }
+
+            const controller = new Student();
+
+
+            const promise = controller.get.apply(controller, validatedArgs as any);
+            promiseHandler(controller, promise, response, next);
+        });
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    app.put('/student/:id',
+        function(request: any, response: any, next: any) {
+            const args = {
+                token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
+                id: { "in": "path", "name": "id", "required": true, "dataType": "string" },
+                new_profile: { "in": "body", "name": "new_profile", "required": true, "dataType": "nestedObjectLiteral", "nestedProperties": { "portfolio_link": { "dataType": "string" }, "github_link": { "dataType": "string" }, "linkedin_link": { "dataType": "string" }, "resume_link": { "dataType": "string" }, "degree": { "dataType": "string", "required": true }, "uni": { "dataType": "string", "required": true }, "skills": { "dataType": "any", "required": true }, "about": { "dataType": "string", "required": true }, "last_name": { "dataType": "string", "required": true }, "first_name": { "dataType": "string", "required": true } } },
+                request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request);
+            } catch (err) {
+                return next(err);
+            }
+
+            const controller = new Student();
+
+
+            const promise = controller.put.apply(controller, validatedArgs as any);
+            promiseHandler(controller, promise, response, next);
+        });
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     app.put('/company/:id',
         function(request: any, response: any, next: any) {
             const args = {
                 token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
                 id: { "in": "path", "name": "id", "required": true, "dataType": "string" },
+                new_info: { "in": "body", "name": "new_info", "required": true, "dataType": "nestedObjectLiteral", "nestedProperties": { "contact_info": { "dataType": "any", "required": true }, "website": { "dataType": "string", "required": true }, "videos": { "dataType": "any", "required": true }, "graduate_stories": { "dataType": "any", "required": true }, "overview": { "dataType": "any", "required": true }, "name": { "dataType": "string", "required": true }, "id": { "dataType": "string", "required": true } } },
                 request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
             };
 
@@ -274,7 +273,7 @@ export function RegisterRoutes(app: express.Express) {
             promiseHandler(controller, promise, response, next);
         });
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    app.put('/admin/users/:type',
+    app.get('/admin/users/:type',
         function(request: any, response: any, next: any) {
             const args = {
                 token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
@@ -326,6 +325,7 @@ export function RegisterRoutes(app: express.Express) {
             const args = {
                 token: { "in": "query", "name": "token", "required": true, "dataType": "string" },
                 type: { "in": "path", "name": "type", "required": true, "dataType": "string" },
+                new_info: { "in": "body", "name": "new_info", "required": true, "dataType": "nestedObjectLiteral", "nestedProperties": { "about_us": { "dataType": "any", "required": true }, "instructions": { "dataType": "any", "required": true } } },
                 request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
             };
 
